Don't change stock split factor by rounding

Rounding of the stock split factor may cause the factor to become zero
which will later result in a division by zero. The factor must not be
rounded to solve the problem.

BUG: 402750
FIXED-IN: 5.0.3